--- a/samples/index1.html
+++ b/samples/index1.html
@@ -12,7 +12,8 @@
     </style>
   </head>
   <body onload={main()}>
-    <canvas id="glcanvas" width="640" height="320"></canvas>
-    <script src='./index1.js' type='text/javascript'></script>
+    <canvas id="glcanvas" width="640" height="480"></canvas>
   </body>
+  <script src="../gl-matrix.js"></script>
+  <script src='./index1.js' type='text/javascript'></script>
 </html>
