--- a/samples/index.html
+++ b/samples/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>webgl fundamentals</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>webgl fundamentals
-    </title>
-</head>
-
-<body>
-    <canvas id='canvas' width='640' height='640'></canvas>
-</body>
-<script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-<script type='text/javascript'>
-    var canvas = document.querySelector('#canvas');
-    var gl = canvas.getContext('webgl');
+  <body>
+    <canvas id="canvas" width="640" height="640"></canvas>
+  </body>
+  <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
+  <script type="text/javascript">
+    var canvas = document.querySelector("#canvas");
+    var gl = canvas.getContext("webgl");
 
     if (!gl) {
-        alert('init gl failed');
+      alert("init gl failed");
     }
-
-    const vertexSource =
-        `
+    // 从像素坐标转化到[0.0, 1.0]
+    // 扩大一倍， 就是[0.0, 2.0]
+    // 移动原点，使其满足[-1.0, 1.0]
+    const vertexSource = `
         attribute vec4 a_position;
+        uniform vec2 u_resolution;
         void main() {
-
-        gl_Position = a_position;
- }
+            vec2 zeroToOne = a_position.xy / u_resolution;
+            vec2 zeroToTwo = zeroToOne * 2.0; 
+            vec2 clipSpace = zeroToTwo - 1.0; 
+            gl_Position = vec4(clipSpace, 0, 1);
+        }
     `;
 
-    const fragmentSource =
-        `
+    const fragmentSource = `
         precision mediump float;
 
         void main() {
@@ -40,68 +41,73 @@
     `;
 
     function createShader(gl, type, source) {
-        var shader = gl.createShader(type); // 创建着色器对象
-        gl.shaderSource(shader, source); // 提供数据源
-        gl.compileShader(shader); // 编译 -> 生成着色器
-        if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-            console.log(gl.getShaderInfoLog(shader));
-            gl.deleteShader(shader);
-            return null;
-        }
-        return shader;
+      var shader = gl.createShader(type); // 创建着色器对象
+      gl.shaderSource(shader, source); // 提供数据源
+      gl.compileShader(shader); // 编译 -> 生成着色器
+      if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+        console.log(gl.getShaderInfoLog(shader));
+        gl.deleteShader(shader);
+        return null;
+      }
+      return shader;
     }
 
     var vertexShader = createShader(gl, gl.VERTEX_SHADER, vertexSource);
     var fragmentShader = createShader(gl, gl.FRAGMENT_SHADER, fragmentSource);
 
     function createProgram(gl, vertexShader, fragmentShader) {
-        var program = gl.createProgram();
-        gl.attachShader(program, vertexShader);
-        gl.attachShader(program, fragmentShader);
-        gl.linkProgram(program);
-        var success = gl.getProgramParameter(program, gl.LINK_STATUS);
-        if (success) {
-            return program;
-        } else {
-            console.log(gl.getProgramInfoLog(program));
-            gl.deleteProgram(program);
-            return null;
-        }
-
+      var program = gl.createProgram();
+      gl.attachShader(program, vertexShader);
+      gl.attachShader(program, fragmentShader);
+      gl.linkProgram(program);
+      var success = gl.getProgramParameter(program, gl.LINK_STATUS);
+      if (success) {
+        return program;
+      } else {
+        console.log(gl.getProgramInfoLog(program));
+        gl.deleteProgram(program);
+        return null;
+      }
     }
 
     var program = createProgram(gl, vertexShader, fragmentShader);
 
     // 把数据加载进去
-    var positionAttributeLocation = gl.getAttribLocation(program, 'a_position');
+    var positionAttributeLocation = gl.getAttribLocation(program, "a_position");
+    
+    // 找到 resolution 的值
+    var resolutionUniformLocation = gl.getUniformLocation(
+      program,
+      "u_resolution"
+    );
 
+   
     var positionBuffer = gl.createBuffer();
 
     gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
 
     var positions = [
-        1, 1,
-        1, -1,
-        -1, -1,
-        -1, 1,
-    ];
+        0, 0, 
+        0, 640, 
+        640, 0, 
+        10, 30, 
+        80, 20, 
+        80, 30
+];
 
     gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW);
 
     // resize canvas
     webglUtils.resizeCanvasToDisplaySize(gl.canvas);
 
-
+   
     gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
-
 
     // 清空
     gl.clearColor(0, 0, 0, 0);
     gl.clear(gl.COLOR_BUFFER_BIT);
-
     // 告诉它用我们之前写好的着色程序（一个着色器对）
     gl.useProgram(program);
-
 
     gl.enableVertexAttribArray(positionAttributeLocation);
 
@@ -116,13 +122,20 @@
     // 每次迭代运行运动多少内存到下一个数据开始点
     var offset = 0; // 从缓冲起始位置开始读取
     gl.vertexAttribPointer(
-        positionAttributeLocation, size, type, normalize, stride, offset);
+      positionAttributeLocation,
+      size,
+      type,
+      normalize,
+      stride,
+      offset
+    );
 
-    var primitiveType = gl.LINE_STRIP;
+      // set the resolution
+    gl.uniform2f(resolutionUniformLocation, gl.canvas.width, gl.canvas.height);
+
+    var primitiveType = gl.TRIANGLES;
     var offset = 0;
     var count = positions.length / 2;
-    gl.drawArrays(primitiveType, offset, count); // 
-    
-</script>
-
+    gl.drawArrays(primitiveType, offset, count); //
+  </script>
 </html>
