--- a/samples/index.html
+++ b/samples/index.html
@@ -28,15 +28,17 @@
             vec2 zeroToOne = a_position.xy / u_resolution;
             vec2 zeroToTwo = zeroToOne * 2.0; 
             vec2 clipSpace = zeroToTwo - 1.0; 
-            gl_Position = vec4(clipSpace, 0, 1);
+            gl_Position = vec4(clipSpace * vec2(1, -1), 0, 1);
         }
     `;
 
     const fragmentSource = `
         precision mediump float;
 
+        uniform vec4 u_color;
+
         void main() {
-            gl_FragColor=vec4(0.3, 1, 0.1, 1); 
+        gl_FragColor = u_color;
         }
     `;
 
@@ -70,37 +72,33 @@
       }
     }
 
+ gl.clearColor(0, 0, 0, 0);
+    gl.clear(gl.COLOR_BUFFER_BIT);
     var program = createProgram(gl, vertexShader, fragmentShader);
 
-    // 把数据加载进去
+    // 找到position 的值
     var positionAttributeLocation = gl.getAttribLocation(program, "a_position");
-    
+
     // 找到 resolution 的值
     var resolutionUniformLocation = gl.getUniformLocation(
       program,
       "u_resolution"
     );
 
-   
+    gl.clearColor(0, 0, 0, 0);
+    gl.clear(gl.COLOR_BUFFER_BIT);
+    var colorUniformLocation = gl.getUniformLocation(program, "u_color");
+
+    // 给position 创建buffer
     var positionBuffer = gl.createBuffer();
 
     gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
 
-    var positions = [
-        0, 0, 
-        0, 640, 
-        640, 0, 
-        10, 30, 
-        80, 20, 
-        80, 30
-];
-
-    gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW);
+    var positions = [10, 20, 80, 20, 10, 30, 10, 30, 80, 20, 80, 30];
 
     // resize canvas
     webglUtils.resizeCanvasToDisplaySize(gl.canvas);
 
-   
     gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
 
     // 清空
@@ -130,12 +128,47 @@
       offset
     );
 
-      // set the resolution
+    // set the resolution
     gl.uniform2f(resolutionUniformLocation, gl.canvas.width, gl.canvas.height);
 
-    var primitiveType = gl.TRIANGLES;
-    var offset = 0;
-    var count = positions.length / 2;
-    gl.drawArrays(primitiveType, offset, count); //
+    for (let i = 0; i < 100; i++) {
+      setRectangle(
+        gl,
+        randomInt(300),
+        randomInt(300),
+        randomInt(300),
+        randomInt(300)
+      );
+      gl.uniform4f(
+        colorUniformLocation,
+        Math.random(),
+        Math.random(),
+        Math.random(),
+        Math.random(),
+        1
+      );
+
+      var primitiveType = gl.TRIANGLES;
+      var offset = 0;
+      var count = positions.length / 2;
+      gl.drawArrays(primitiveType, offset, count); //
+    }
+
+    function randomInt(range) {
+      return Math.floor(Math.random() * range);
+    }
+
+    function setRectangle(gl, x, y, width, height) {
+      var x1 = x;
+      var x2 = x + width;
+      var y1 = y;
+      var y2 = y + height;
+
+      gl.bufferData(
+        gl.ARRAY_BUFFER,
+        new Float32Array([x1, y1, x2, y1, x1, y2, x1, y2, x2, y1, x2, y2]),
+        gl.STATIC_DRAW
+      );
+    }
   </script>
 </html>
