--- a/samples/index1.html
+++ b/samples/index1.html
@@ -14,6 +14,6 @@
   <body onload={main()}>
     <canvas id="glcanvas" width="640" height="480"></canvas>
   </body>
-  <script src="../gl-matrix.js"></script>
+  <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
   <script src='./index1.js' type='text/javascript'></script>
 </html>
