--- a/Lasso/index.html
+++ b/Lasso/index.html
@@ -31,7 +31,7 @@
             
             gl = canvas.getContext('webgl');
             if (!gl) {
-                console.log("get webgl context failed!");
+                console.error("get webgl context failed!");
                 return;
             }
             
