--- a/Lasso/index1.html
+++ b/Lasso/index1.html
@@ -16,9 +16,9 @@
 <body onload="main()">
     <canvas id='canvas' width='800' height='600'></canvas>
 </body>
-<script src="./gl-matrix.js"></script>
-<script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-<script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
-<script src='./index.js' type='text/javascript'></script>
+<script src="./gl-matrix.js" async ></script>
+<script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js" async></script>
+<script src="https://webglfundamentals.org/webgl/resources/m4.js" async ></script>
+<script src='./index.js' type='text/javascript' defer></script>
 
 </html>
