--- a/Lasso/theory.html
+++ b/Lasso/theory.html
@@ -1,133 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-        canvas {
-            background-color: black;
-        }
-    </style>
-</head>
-
-<body onload='main()'>
-    <canvas id='canvas' width='640' height='480'></canvas>
-    <script src="./gl-matrix.js"></script>
-    <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
-    <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
-
-    <script id="2d-vertex-shader" type="x-shader/x-vertex">
-        attribute vec4 a_position;
-        uniform vec2 u_resolution;
-        void main() {
-            vec2 zeroToOne = a_position.xy / u_resolution;
-            vec2 zeroToTwo = zeroToOne * 2.0;
-            vec2 clipSpace = zeroToTwo - 1.0; 
-            gl_Position = vec4(clipSpace * vec2(1, -1), 0, 1);
-        }
-    </script>
-    <!-- fragment shader -->
-    <script id="2d-fragment-shader" type="x-shader/x-fragment">
-        precision mediump float;
-        uniform vec4 u_color;
-        void main() {
-            gl_FragColor = u_color;
-        }
-    </script>
-    <script>
-        function main() {
-            const canvas = document.querySelector('#canvas');
-            const gl = canvas.getContext('webgl');
-            if (!gl) {
-                console.error("get webgl context failed!");
-                return;
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Document</title>
+        <style>
+            canvas {
+                background-color: black;
             }
-            const program = webglUtils.createProgramFromScripts(gl, ["2d-vertex-shader", "2d-fragment-shader"]);
+        </style>
+    </head>
 
-            const positionAttributeLocation = gl.getAttribLocation(program, 'a_position');
-            const colorUniformLocation = gl.getUniformLocation(program, "u_color");
-            const resolutionUniformLocation = gl.getUniformLocation(program, 'u_resolution');
-    
+    <body onload="main()">
+        <canvas id="canvas" width="640" height="480"></canvas>
+        <div id="uiContainer">
+            <div id="ui">
+              <div id="x"></div>
+              <div id="y"></div>
+              <div id="angle"></div>
+              <div id="scaleX"></div>
+              <div id="scaleY"></div>
+            </div>
+          </div>
 
 
-            const positionBuffer = gl.createBuffer();
-            gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer); // 绑定position Buffer 到 gl.Array_Buffer
+        <script src="./gl-matrix.js"></script>
+        <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
+        <script src="https://webglfundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
+        <script src="https://webglfundamentals.org/webgl/resources/m3.js"></script>
 
-            // const position = [
-            //     10, 20,
-            //     80, 20,
-            //     10, 30,
-            //     10, 30,
-            //     80, 20,
-            //     80, 30,
-            // ];
+        <script id="2d-vertex-shader" type="x-shader/x-vertex">
+            attribute vec2 a_position;
+            uniform mat3 u_matrix;
+            varying vec4 v_color;
+            void main() {
+                gl_Position = vec4((u_matrix * vec3(a_position, 1)).xy, 0, 1);
+                v_color = gl_Position * 0.5 + 0.5;
+            }
+        </script>
+        <!-- fragment shader -->
+        <script id="2d-fragment-shader" type="x-shader/x-fragment">
+            precision mediump float;
+            varying vec4 v_color;
+            void main() {
+                gl_FragColor = v_color;
+            }
+        </script>
+        <script>
+            function main() {
+                const canvas = document.querySelector('#canvas');
+                const gl = canvas.getContext('webgl');
+                if (!gl) {
+                    console.error('get webgl context failed!');
+                    return;
+                }
+                const program = webglUtils.createProgramFromScripts(gl, [
+                    '2d-vertex-shader',
+                    '2d-fragment-shader',
+                ]);
 
-            // gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(position), gl.STATIC_DRAW);
+                const positionAttributeLocation = gl.getAttribLocation(
+                    program,
+                    'a_position'
+                );
+                // const colorUniformLocation = gl.getUniformLocation(program, "v_color");
+                // const resolutionUniformLocation = gl.getUniformLocation(program, 'u_resolution');
+                const matrixUniformLocation = gl.getUniformLocation(
+                    program,
+                    'u_matrix'
+                );
 
-            webglUtils.resizeCanvasToDisplaySize(gl.canvas);
-            gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
-            gl.clearColor(0, 0, 0, 0);
-            gl.clear(gl.COLOR_BUFFER_BIT);
+                const positionBuffer = gl.createBuffer();
+                gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer); // 绑定position Buffer 到 gl.Array_Buffer
 
-            gl.useProgram(program);
+                var translation = [0, 0];
+                var angleInRadians = 0;
+                var scale = [1, 1];
 
-            gl.uniform2f(resolutionUniformLocation, gl.canvas.width, gl.canvas.height);
-
-            gl.enableVertexAttribArray(positionAttributeLocation);
-
-            const size = 2;
-            const type = gl.FLOAT;
-            const normalize = false;
-            const stride = 0;
-            const offset = 0;
-
-            gl.vertexAttribPointer(positionAttributeLocation, size, type, normalize, stride, offset);
-
+                setGeometry(gl);
             
-            for (let i = 0; i < 50; i++) {
-                const primitiveType = gl.TRIANGLES;
-                const offsetDraw = 0;
-                // const count = position.length / 2;
+                webglLessonsUI.setupSlider('#x', {
+                    value: translation[0],
+                    slide: updatePosition(0, gl, program, positionAttributeLocation, translation),
+                    max: gl.canvas.width,
+                });
+                webglLessonsUI.setupSlider('#y', {
+                    value: translation[1],
+                    slide: updatePosition(1, gl, program, positionAttributeLocation, translation),
+                    max: gl.canvas.height,
+                });
+                webglLessonsUI.setupSlider('#angle', {
+                    slide: updateAngle(...this, gl, program, positionAttributeLocation),
+                    max: 360,
+                },);
+                webglLessonsUI.setupSlider('#scaleX', {
+                    value: scale[0],
+                    slide: updateScale(0, gl, program, positionAttributeLocation),
+                    min: -5,
+                    max: 5,
+                    step: 0.01,
+                    precision: 2,
+                });
+                webglLessonsUI.setupSlider('#scaleY', {
+                    value: scale[1],
+                    slide: updateScale(1, gl, program, positionAttributeLocation),
+                    min: -5,
+                    max: 5,
+                    step: 0.01,
+                    precision: 2,
+                });
 
-                setRectangle(gl, randomInt(300), randomInt(300), randomInt(300), randomInt(300));
-                gl.uniform4f(colorUniformLocation, Math.random(), Math.random(), Math.random(), 1, 1);
+                drawSence(gl, program, positionAttributeLocation, positionBuffer, translation, angleInRadians, scale, matrixUniformLocation);
+            }
 
-                gl.drawArrays(primitiveType, offsetDraw, 6);
+            function drawSence(gl, program, positionAttributeLocation, positionBuffer, translation, angleInRadians, scale, matrixUniformLocation) {
+                webglUtils.resizeCanvasToDisplaySize(gl.canvas);
+                gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+                gl.clearColor(0, 0, 0, 0);
+                gl.clear(gl.COLOR_BUFFER_BIT);
+
+                gl.useProgram(program);
+                gl.enableVertexAttribArray(positionAttributeLocation);
+
+                gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+
+                const size = 2;
+                const type = gl.FLOAT;
+                const normalize = false;
+                const stride = 0;
+                const offset = 0;
+
+                gl.vertexAttribPointer(
+                    positionAttributeLocation,
+                    size,
+                    type,
+                    normalize,
+                    stride,
+                    offset
+                );
+
+                let matrix = m3.projection(
+                    gl.canvas.clientWidth,
+                    gl.canvas.clientHeight
+                );
+                console.log(matrix);
+
+                matrix = m3.translate(matrix, translation[0], translation[1]); // slider bar 设置的translation
+                console.log(matrix);
+                matrix = m3.rotate(matrix, angleInRadians);
+                console.log(matrix);
+                matrix = m3.scale(matrix, scale[0], scale[1]);
+                console.log(matrix);
+
+                gl.uniformMatrix3fv(matrixUniformLocation, false, matrix);
+
+                var primitiveType = gl.TRIANGLE;
+                var count = 3;
+                gl.drawArrays(primitiveType, offset, count);
+            }
+
+            function updatePosition(index, gl, program, positionAttributeLocation, translation) {
+                return function(event, ui) {
+                    translation[index] = ui.value;
+                    drawScene(gl, program, positionAttributeLocation);
+                };
+            }
+
+            function updateAngle(event, ui,  gl, program, positionAttributeLocation) {
+                var angleInDegrees = 360 - ui.value;
+                angleInRadians = (angleInDegrees * Math.PI) / 180;
+                drawScene(gl, program, positionAttributeLocation);
+            }
+
+            function updateScale(index, gl, program, positionAttributeLocation) {
+                return function(event, ui) {
+                    scale[index] = ui.value;
+                    drawScene(gl, program, positionAttributeLocation);
+                };
             }
 
 
-        }
-
-        function randomInt(range) {
-            return Math.floor(Math.random() * range);
-        }
-
-        // 用参数生成矩形顶点并写进缓冲
-
-        function setRectangle(gl, x, y, width, height) {
-            var x1 = x;
-            var x2 = x + width;
-            var y1 = y;
-            var y2 = y + height;
-
-            // 注意: gl.bufferData(gl.ARRAY_BUFFER, ...) 将会影响到
-            // 当前绑定点`ARRAY_BUFFER`的绑定缓冲
-            // 目前我们只有一个缓冲，如果我们有多个缓冲
-            // 我们需要先将所需缓冲绑定到`ARRAY_BUFFER`
-
-            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-                x1, y1,
-                x2, y1,
-                x1, y2,
-                x1, y2,
-                x2, y1,
-                x2, y2
-            ]), gl.STATIC_DRAW);
-        }
-    </script>
-</body>
-
+            function setGeometry(gl) {
+                gl.bufferData(
+                    gl.ARRAY_BUFFER,
+                    new Float32Array([
+                        0, -100,
+                        150,  125,
+                        -175,  100
+                    ]),
+                    gl.STATIC_DRAW
+                );
+            }
+        </script>
+    </body>
 </html>
