--- a/lassoTool/public/index.html
+++ b/lassoTool/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -100,7 +99,7 @@
 
     let modelViewMatrix = glMatrix.mat4.create();
     let projectionMatrix = glMatrix.mat4.create();
-    glMatrix.mat4.ortho(projectionMatrix, 1, 0, 1, 0, -100, 100);
+    glMatrix.mat4.ortho(projectionMatrix, 0, 1, 1, 0, -100, 100);
     let bgImageBuffer = null;
     let uBrightness;
     let brightness = 0.0;
@@ -199,7 +198,7 @@
 
     function convertMouseLocation(x, y) {
         return {
-            x: (x / 800),
+            x: (x / 800 ),
             y: (y / 600)
         };
     }
@@ -211,6 +210,7 @@
         const rect = canvas.getBoundingClientRect();
         let pos = convertMouseLocation(e.clientX - rect.left, e.clientY - rect.top);
         selectionPoints = [pos.x, pos.y];
+        console.log(selectionPoints);
     }
 
     function onMouseMove(e) {
@@ -218,6 +218,7 @@
             const canvas = document.querySelector('#webgl');
             const rect = canvas.getBoundingClientRect();
             let pos = convertMouseLocation(e.clientX - rect.left, e.clientY - rect.top);
+            console.log('move', pos);
             selectionPoints.push(pos.x, pos.y);
             if (selectionPoints.length == 4) {
                 selectionPointsBuffer = createBuffer(new Float32Array(selectionPoints));
@@ -238,9 +239,12 @@
     function onMouseUp(e) {
         const canvas = document.querySelector('#webgl');
         const rect = canvas.getBoundingClientRect();
+
+        // check the last position of mouse that it is  a certain distance 
         if (selectionPointsBuffer &&
             Math.abs(selectionPoints[0] * 800 - e.clientX + rect.left) < 25 &&
-            Math.abs((1 - selectionPoints[1]) * 600 - e.clientY + rect.top) < 25) {
+            Math.abs((selectionPoints[1]) * 600 - e.clientY + rect.top) < 25) {
+                console.log('inside');
             selectionPoints.push(selectionPoints[0]);
             selectionPoints.push(selectionPoints[1]);
             updateBufferData(selectionPointsBuffer, new Float32Array(selectionPoints));
